# ai-llm-engineering-1-day5

./: 1-advanced_retrievers.ipynb  README.md  bills_evaluation_dataset.csv  pyproject.toml  retriever_evaluation_results.csv
bills/: ai_law.json
